# vcsel_lib

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  vcsel_lib.py
.github/workflows/: build.yml  lint.yml  tests.yml
examples/: bifurcation_diagrams_order_parameter.py  coupling_scaling.py  coupling_scaling_eqs.py  injection_continuation.py  injection_shape_tests.py  manifold_learning.py  optical_spectrum_varying_kappa_phi_continuation.py  order_parameter.py  potential_function.py  simple_example.py  simulate_all_eq.py  stability_manifold.py  test_jacobian.py  test_jacobian2.py  time_series_continuation.py  varying_injection_parameters.py  verify_stability.py
examples/working_examples/: basin_size.py  gif_maker.py  injection_freq_phase_tests.py  injection_noise_robustness.py  injection_shape_tests.py  injection_steering.py  simple_example.py  simulate_all_eq.py  stability_manifold.py  verify_stability.py
scripts/: run_checks.sh  run_injection_noise_robustness_loop.slurm
tests/: test_vcsel_lib.py
